<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

<LinearLayout
    android:id="@+id/producto"
    android:background="@color/blanco"
    android:paddingTop="20dp"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:gravity="center"
        android:id="@+id/foto"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:src="@drawable/aquijue"
        android:contentDescription="@string/image_desc"
        />


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nombre"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/tv_precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/precio"
            android:textAppearance="@android:style/TextAppearance.Medium" />





<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>

</LinearLayout>